tests/e2e/semantics/throw_empty.error
Error: syntax error in story at line 1, column 1

1|    throw
      ^^^^^

E0135: Only strings can be thrown.
